--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="main.css">
+</head>
+
+<nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Our team</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+</nav>
+
 <body>
 <script src ="script.js" defer></script>
-<div id = "matches">
 
-</div>
 <form id="playerForm">
-    <label for="fname">Hoeveel spelers doen er mee?</label><br>
+    <label for="aantalSpelers">Hoeveel spelers doen er mee?</label><br>
     <input type="number"><br>
     <input type="submit" value="Submit">
 </form>
-</form> 
+
+
+
+
+<form id = "playerNames" class = "column side">
+    
+</form>
+
+
 </body>
 </html> 
