Add matches and fixed submit button in form

--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
     <input type="submit" value="Submit">
 </form>
 
-
-
-
-<form id = "playerNames" class = "column side">
-    
+<form id = "playerNames" class = "column side"> 
 </form>
 
+<div id = "matchesDiv" class = "column middle">
+    
+</div>
 
 </body>
 </html> 
