improved getTeams and changed some functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </nav>
 
 <body>
+<script src ="getTeams.js" defer></script>
 <script src ="script.js" defer></script>
+
 
 <form id="playerForm">
     <label for="aantalSpelers">Hoeveel spelers doen er mee?</label><br>
