Added visibility setting through buttons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </form>
 </div>
 
-<div class="container" id="page2">
+<div class="container" id="page2" style="display: none;">
     <h2>Spelers informatie</h2>
     <form id="formPlayers">
         <button type="button" class="btn" id="startSpel">Start Spel</button>
