Added team selection

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <body>
 <script src ="getTeams.js" defer></script>
 <script src ="getGameInformation.js" defer></script>
+<script src ="startGame.js" defer></script>
 <script src ="script.js" defer></script>
+
 
 
  <!-- Page 1: User Information Form -->
@@ -32,5 +34,20 @@
         <button type="button" class="btn" id="startSpel">Start Spel</button>
     </form>
 </div>
+
+<div class="container" id="page3" style="display: none;">
+    <h1>Player Names and Their Teams</h1>
+    <table id="playerTable">
+        <thead>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
+</div>
+
+
+
+
 </body>
 </html> 
