Added check for unique teams

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+
+<title>KKD - vrijdag</title>
 <head>
     <link rel="stylesheet" href="main.css">
 </head>
@@ -36,7 +38,7 @@
 </div>
 
 <div class="container" id="page3" style="display: none;">
-    <h1>Player Names and Their Teams</h1>
+    <h1>Speloverzicht</h1>
     <table id="playerTable">
         <thead>
         </thead>
