Moved createTable to different file and worked further on refreshScores

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<script src = "createTable.js" defer></script>  
 <script src = "refreshScores.js" defer></script>
 <script src ="getTeams.js" defer></script>
 <script src ="getGameInformation.js" defer></script>
