--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <title>KKD - vrijdag</title>
 <head>
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" type="image/x-icon" href="/fotos/favicon.ico">
-    <link rel="icon" type="image/png" href="/fotos/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/fotos/favicon.ico?">
+    <link rel="icon" type="image/png" href="/fotos/favicon.png?">
 </head>
 
 <body>
