--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <label for="teamCount">Aantal Teams per Speler:</label>
             <input type="number" id="teamCount" name="teamCount" min=1 required>
         </div>
+        <div id="errorMessage" style="color: red;"></div>
         <button type="submit" class="btn" id="Volgende">Volgende</button>
     </form>
 </div>
