--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
  <!-- Page 1: User Information Form -->
  <div class="container" id="page1" style="display: none;">
     <h2>Spel informatie</h2>
-     
     <h2 id="teamNumber"></h2>
     <form id="formGame" onsubmit="return getGameInformation(event)" novalidate>
+        <img class = "center" src="/fotos/hans.gif" alt="Girl in a jacket" id = "Hans" width="500" height="300" style="display: none;"> 
         <div class="form-group">
-            <label for="playerCount">Aantal Spelers:</label>
-            <input type="number" id="playerCount" name="playerCount" min=1 required>
+            <label for="playerCount" id = "playerCountLabel" style="display: none;">Aantal Spelers:</label>
+            <input type="number" id="playerCount" name="playerCount" min=1 required style="display: none;">
         </div>
         <div class="form-group">
-            <label for="teamCount">Aantal Teams per Speler:</label>
-            <input type="number" id="teamCount" name="teamCount" min=1 required>
+            <label for="teamCount" id = "teamCountLabel" style="display: none;">Aantal Teams per Speler:</label>
+            <input type="number" id="teamCount" name="teamCount" min=1 required style="display: none;">
         </div>
         <div id="errorMessage" style="color: red;"></div>
-        <button type="submit" class="btn" id="Volgende">Volgende</button>
+        <button type="submit" class="btn" id="Volgende" style="display: none;">Volgende</button>
     </form>
 </div>
 <!-- Page 2: Playernames Form -->
