Added rules and updated ui

--- a/rules.html
+++ b/rules.html
@@ -23,15 +23,12 @@
 
  <div class="container" id="page1">
     <h2>Spelregels</h2>
-    <p> De spelregels voor het keukenkampioendivisieschakelkanaalvrijdagrietbakspel zijn vrij simpel </p>
+    <p> De spelregels voor het keukenkampioendivisie-schakelkanaal-vrijdag-rietbak-spel zijn vrij simpel </p>
     <ul class="vertical-list">
-        <li> test1 </li> 
-        <li> test1 </li>
-        <li> test1 </li>
-        <li> test1 </li>
-        <li> test1 </li>
-        <li> test1 </li>
-        <li> test1 </li>
+        <li> Teams worden willekeuring toegewezen aan de spelers. </li> 
+        <li> Bij een doelpunt van een aan jou toegewezen team mag je een bak uitdelen. </li>
+        <li> In de rust dient er een bak met Hans te worden gedronken. </li>
+        <li> Er dient een bak te worden genuttigd bij een rode kaart voor een aan jou toegewezen team. </li>
     </ul>
 </div>
 
