--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <h2>Spel informatie</h2>
     <h2 id="teamNumber"></h2>
     <form id="formGame" onsubmit="return getGameInformation(event)" novalidate>
-        <img class = "center" src="/fotos/hans.gif" alt="Girl in a jacket" id = "Hans" width="500" height="300" style="display: none;"> 
+        <img class = "center" src="https://i.makeagif.com/media/9-24-2024/FCkKn5.mp4" alt="Girl in a jacket" id = "Hans" width="500" height="300" style="display: none;"> 
         <div class="form-group">
             <label for="playerCount" id = "playerCountLabel" style="display: none;">Aantal Spelers:</label>
             <input type="number" id="playerCount" name="playerCount" min=1 required style="display: none;">
