--- a/index.html
+++ b/index.html
@@ -32,13 +32,7 @@
       <li><a href="#">Contact</a></li>
     </ul>
 </nav>
-<div class = "container">
-    <div class = "center">
-        <canvas id="wheelCanvas" width="400" height="400"></canvas>
-        <button id="spinButton">Spin the Wheel</button>
-        <p id="result"></p>
-    </div>
-</div>
+
 
 <div class="container" id="page0" style="display: none;">
     <div class = "button-container center">
@@ -63,7 +57,7 @@
     <h2>Spel informatie</h2>
     <h2 id="teamNumber"></h2>
     <form id="formGame" onsubmit="return getGameInformation(event)" novalidate>
-        <img class = "center" src="/fotos/hans.gif" alt="Girl in a jacket" id = "Hans" width="500" height="300" style="display: none;"> 
+        <img class = "center" src="https://i.makeagif.com/media/9-24-2024/FCkKn5.gif" alt="Girl in a jacket" id = "Hans" width="500" height="300" style="display: none;"> 
         <div class="form-group">
             <label for="playerCount" id = "playerCountLabel" style="display: none;">Aantal Spelers:</label>
             <input type="number" id="playerCount" name="playerCount" min=1 required style="display: none;">
